ci: increase postgres max_connections limit to 200
There is no available env var to set a custom max_connections value. In
order to do this, we need to modify the database configuration itself
which can be done by running the 'alter system set' psql command.

Postgres needs to be restarted in order to apply the new configuration.

Value for the max_connections ranges from 1..262143. Setting the value
to 200 for now as our integration tests only require around 100.

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -73,6 +73,7 @@ jobs:
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
+          --name kas-fleet-manager-db
 
       keycloak:
         image: quay.io/keycloak/keycloak:17.0.1-legacy
@@ -103,6 +104,10 @@ jobs:
           filters: |
             openapi:
               - 'openapi/*.yaml'
+      - name: Increase Postgres max_connections limit
+        run: docker exec -i kas-fleet-manager-db /bin/bash docker-entrypoint.sh psql -U kas_fleet_manager -d serviceapitests -c 'alter system set max_connections=200;'
+      - name: Restart Postgres container
+        run: docker restart --time 0 kas-fleet-manager-db
       - name: Setup Keycloak realm config
         run: make sso/config
       - name: Cache go module
